--- a/ui/src/app/views/projectv2/run/run-results.html
+++ b/ui/src/app/views/projectv2/run/run-results.html
@@ -15,8 +15,8 @@
 </div>
 <nz-list nzSize="small">
 	<nz-list-item *ngFor="let item of filteredResults" (click)="clickResult(item.result)">
-		<span class="identifier">{{item.result.identifier}}</span>
-		<span class="label">{{item.result.label}}</span>
+		<span class="identifier" [title]="item.result.identifier">{{item.result.identifier}}</span>
+		<span class="label" [title]="item.result.label">{{item.result.label}}</span>
 		<a *ngIf="item.downloadLink" [href]="item.downloadLink" target="_blank" rel="noopener noreferrer"
 			title="Download the result" (click)="$event.stopPropagation()"><i nz-icon nzType="download"
 				nzTheme="outline"></i></a>
