--- a/ui/src/app/shared/searchable/searchable.html
+++ b/ui/src/app/shared/searchable/searchable.html
@@ -1,4 +1,5 @@
 <ng-content></ng-content>
-<a class="search" [routerLink]="link" [queryParams]="params" [queryParamsHandling]="paramsHandling">
+<a class="search" [class.fixed]="fixed" [routerLink]="link" [queryParams]="params"
+	[queryParamsHandling]="paramsHandling" [title]="title">
 	<span nz-icon nzType="search"></span>
 </a>
