--- a/ui/src/app/views/projectv2/run/run.scss
+++ b/ui/src/app/views/projectv2/run/run.scss
@@ -69,6 +69,10 @@
             flex-direction: row;
             align-items: center;
 
+            button:not(:first-child) {
+                margin-left: 10px;
+            }
+
             button:not([nzDanger]) {
                 background-color: #fff;
 
