--- a/ui/src/app/views/projectv2/run/run.html
+++ b/ui/src/app/views/projectv2/run/run.html
@@ -68,7 +68,7 @@
                         </span>
                         <br />
                         <span style="margin-right: 10px;">
-                            <b>Semver:</b>&nbsp;
+                            <b>Version:</b>&nbsp;
                             <span nz-typography nzCopyable nzContent="{{workflowRun.contexts.cds.version}}"
                                 [nzCopyTooltips]="null"></span>
                         </span>
