--- a/ui/src/app/views/projectv2/run/run-tests.scss
+++ b/ui/src/app/views/projectv2/run/run-tests.scss
@@ -83,6 +83,10 @@ nz-checkbox-group {
     }
   }
 
+  .title {
+    user-select: text;
+  }
+
   .time {
     margin-left: 20px;
     color: rgba(0, 0, 0, .45);
