refactor(ui): run v2 panel navigation
Signed-off-by: richardlt <richard.le.terrier@gmail.com>

--- a/ui/src/app/views/projectv2/run/gate/gate.html
+++ b/ui/src/app/views/projectv2/run/gate/gate.html
@@ -1,4 +1,4 @@
-<div class="title">Trigger job&nbsp;<b>{{gateNode.job}}</b></div>
+<div class="title">Trigger job&nbsp;<b>{{job}}</b></div>
 <div class="content">
     <ng-container *ngFor="let k of request | keys">
         <nz-form-item>
