--- a/ui/src/app/views/project/settings/settings.html
+++ b/ui/src/app/views/project/settings/settings.html
@@ -1,16 +1,8 @@
 <app-tabs [tabs]="tabs" (onSelect)="selectTab($event)"></app-tabs>
+
 <div class="content" *ngIf="selectedTab" [ngSwitch]="selectedTab.key">
-	<div *ngSwitchCase="'variables'">
-		<app-project-variable-sets [project]="project"></app-project-variable-sets>
-	</div>
-	<div *ngSwitchCase="'keys'">
-		<app-project-keys [project]="project"></app-project-keys>
-	</div>
-	<div *ngSwitchCase="'integrations'">
-		<app-project-integrations [project]="project"></app-project-integrations>
-	</div>
-	<div *ngSwitchCase="'advanced'">
-		<h3>{{ 'project_advanced_title' | translate }}</h3>
-		<app-project-admin [project]="project"></app-project-admin>
-	</div>
+	<app-project-variable-sets *ngSwitchCase="'variables'" [project]="project"></app-project-variable-sets>
+	<app-project-keys *ngSwitchCase="'keys'" [project]="project"></app-project-keys>
+	<app-project-integrations *ngSwitchCase="'integrations'" [project]="project"></app-project-integrations>
+	<app-project-advanced *ngSwitchCase="'advanced'" [project]="project"></app-project-advanced>
 </div>
