fix: workflow v1 edit load integrations
Signed-off-by: richardlt <richard.le.terrier@gmail.com>

--- a/ui/src/app/views/projectv2/explore/trigger-analysis/trigger-analysis.html
+++ b/ui/src/app/views/projectv2/explore/trigger-analysis/trigger-analysis.html
@@ -65,7 +65,9 @@
   <div nz-result-extra>
     <dl>
       <dt>Error</dt>
-      <dd>{{analysis?.data?.error}}</dd>
+      <dd>
+        <pre>{{analysis?.data?.error}}</pre>
+      </dd>
       <dt>Entities</dt>
       <dd>
         <ul>
