--- a/ui/src/app/views/projectv2/explore/trigger-analysis/trigger-analysis.scss
+++ b/ui/src/app/views/projectv2/explore/trigger-analysis/trigger-analysis.scss
@@ -2,6 +2,7 @@ nz-result {
   .message {
     width: 100%;
     text-align: center;
+
     [nz-button] {
       margin-top: 14px;
       color: inherit;
@@ -10,20 +11,29 @@ nz-result {
 
   [nz-result-extra] {
     text-align: left;
+
     dl {
       display: grid;
       grid-gap: 4px 16px;
       grid-template-columns: max-content;
     }
+
     dt {
       font-weight: bold;
     }
+
     dd {
       margin: 0;
       grid-column-start: 2;
+
       ul {
         padding-left: 14px;
       }
     }
   }
+}
+
+pre {
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
