feat(ui): upgrade to ng 17
Signed-off-by: richardlt <richard.le.terrier@gmail.com>

--- a/ui/src/app/views/navbar/navbar.html
+++ b/ui/src/app/views/navbar/navbar.html
@@ -42,7 +42,7 @@
                                     [routerLink]="['project', prj.key, 'application', prj.application_name]">
                                     <div class="details">
                                         <div class="title">
-                                            {{prj.application_name}}}
+                                            {{prj.application_name}}&#125;
                                         </div>
                                         <div class="info mt">
                                             {{'navbar_application_in' | translate}} {{prj.key}}
